@@ -7,4 +7,4 @@ SELINUX=<%= @_state %>
 # SELINUXTYPE= type of policy in use. Possible values are:
 # targeted - Only targeted network daemons are protected.
 # strict - Full SELinux protection.
-SELINUXTYPE=<%= @mode %>
+SELINUXTYPE=<%= @_mode %>
