@@ -1,3 +1,8 @@
+* Wed Jul 12 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 2.1.0-0
+- Rework manifests to ensure mcstrans and restorecond services are not
+  running when selinux is disabled.
+- Allow this module to manage restorecond package installation.
+
 * Wed Apr 26 2017 Nick Miller <nick.miller@onyxpoint.com> - 2.1.0-0
 - Moved management of mcstrans and restorecond to the selinux module
 - Change default packages ensure to use the catalyst
